Move changes to src and rebuild

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ abang abrit abyor acung adang adhem adhep agama agung ageng ajang ajeng ambah am
 
   <div class="container">
     <header>
-      <h1>Teblak #<span id=teblakNumber></span></h1>
+      <h1>Teblak #<span name=teblakNumber></span></h1>
       <select name="lang" id="lang">
         <option value="id">Bahasa Indonesia</option>
         <option value="jv">Basa Jawa</option>
@@ -31,7 +31,7 @@ abang abrit abyor acung adang adhem adhep agama agung ageng ajang ajeng ambah am
       <div class="kbrow kb-row-1"></div>
       <div class="kbrow kb-row-2"></div>
       <div class="kbrow kb-row-3"></div>
-      <div>Custom game <input type="text" id="customGameNum"> <button type="button" name="goCustomGame">Go</button></div>
+      <div>Custom game <input type="text" name="customGameNum"> <button type="button" name="goCustomGame">Go</button></div>
       <div class="about"><a href="https://github.com/wildtype/teblak">Source &amp; issues</a></div>
     </footer>
   </div>
@@ -469,7 +469,9 @@ const cellContainer = document.querySelector('.cell-container');
 const statusElement = document.querySelector('.status');
 const restartButton = document.querySelector('button[name="restart"]');
 const selectLanguage = document.querySelector('select#lang');
-const customGameButton = document.querySelector('button[name="goCustomGame"]')
+const customGameNum = document.querySelector('input[name="customGameNum"]');
+const customGameButton = document.querySelector('button[name="goCustomGame"]');
+const teblakNumber = document.querySelector('span[name="teblakNumber"]');
 
 const dictionaryTemplates = document.querySelectorAll('template.dictionary');
 window.dictionaries = [];
@@ -512,7 +514,7 @@ window.addEventListener('load', () => {
 });
 
 showWordNum = (wordNum) => {
-  document.getElementById("teblakNumber").textContent = wordNum;
+  teblakNumber.textContent = wordNum;
 };
 
 newGame = (wordNum) => {
@@ -546,8 +548,7 @@ restartButton.addEventListener('click', () => {
 
 Pubsub.bind('restart', restart);
 customGameButton.addEventListener('click', () => {
-  var customGameNum = document.getElementById("customGameNum").value;
-  customGame(customGameNum);
+  customGame(customGameNum.value);
 });
 
   </script>
